--- a/Dockerfile.toolbox
+++ b/Dockerfile.toolbox
@@ -15,6 +15,6 @@ RUN dnf upgrade -y \
 
 # Install gopass
 RUN curl -Lo gopass.tar.gz https://github.com/$(curl -Ls https://github.com/gopasspw/gopass/releases/latest | sed -n 's/.*href=\"\(.*-linux-amd64.tar.gz\).*/\1/p') \
- && tar xf gopass.tar.gz gopass
- && install gopass /usr/local/bin/
+ && tar xf gopass.tar.gz gopass \
+ && install gopass /usr/local/bin/ \
  && rm gopass*
