--- a/Dockerfile.ansible
+++ b/Dockerfile.ansible
@@ -16,10 +16,4 @@ RUN dnf upgrade -y \
       xorriso \
  && dnf clean all
 
-RUN test ! -d "$PLAYBOOKS" \
- && git clone git@github.com:LuccaSA/Infra.Lucca.git "$PLAYBOOKS" \
- && python3 -m venv --system-site-packages "$PLAYBOOKS/venv" \
- && source "$PLAYBOOKS/venv/bin/activate" \
- && pip install --upgrade pip \
- && pip install -r "$PLAYBOOKS/requirements.txt" \
- && ansible-galaxy role install -r requirements.yml
+COPY install-playbooks.sh /usr/local/bin/install-playbooks.sh
