--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Publish F32 Toolbox image
+name: Publish Fedora Toolbox images
 
 on:
   
@@ -24,5 +24,5 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           dockerfile: Dockerfile.toolbox
           registry: docker.pkg.github.com
-          repository: arouene/f32/toolbox
+          repository: arouene/fedora-toolbox-images/toolbox
           tag_with_ref: true
