--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,28 +1,34 @@
 name: Publish Fedora Toolbox images
 
 on:
-  
   release:
     types: [published]
 
 jobs:
-
   push_to_registry:
-    
     name: Push to GitHub Packages
-    
     runs-on: ubuntu-latest
-    
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
-        
+
+      - name: Prepare variables
+        id: prep
+        run: echo ::set-output name=ref::${GITHUB_REF:10}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
+
       - name: Push to GitHub Packages
         uses: docker/build-push-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Dockerfile.toolbox
-          registry: docker.pkg.github.com
-          repository: arouene/fedora-toolbox-images/toolbox
-          tag_with_ref: true
+          file: ./Dockerfile.toolbox
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/toolbox:${{ steps.prep.outputs.ref }}
